# safe-playground

./: .example.env  .gitignore  README.md  package.json  tsconfig.json
helpers/: client-config.ts  constants.ts  setup.ts
js/: package.json
js/helpers/: client-config.ts  constants.ts  setup.ts
js/scripts/: deploy-safe.ts  execute-multisend.ts  execute-sponsored-transaction.ts  execute-transaction.ts
js/scripts/owners/: add.ts  get.ts
rs/: Cargo.toml
rs/src/: constants.rs  helpers.rs  lib.rs  types.rs
rs/src/dependencies/: gelato_relayer.rs  mod.rs
rs/src/dependencies/account_abstraction/: core.rs  mod.rs  relay.rs
rs/src/dependencies/ethers/: core.rs  mod.rs  utils.rs
rs/src/dependencies/safe/: core.rs  factory.rs  manager.rs  mod.rs
scripts/: create-and-execute-transaction.ts  deploy-safe.ts  execute-multisend.ts  execute-sponsored-transaction.ts
scripts/owners/: add.ts  get.ts  remove.ts
wrap-build-artifacts/account-abstraction/: wrap.info  wrap.wasm
wrap-build-artifacts/ethereum/: wrap.info
wrap-build-artifacts/ethereum/core/: wrap.wasm
wrap-build-artifacts/ethereum/util/: wrap.info  wrap.wasm
wrap-build-artifacts/gelato-relay/: wrap.wasm
wrap-build-artifacts/relay/: wrap.wasm
wrap-build-artifacts/safe/contracts/: wrap.info  wrap.wasm
wrap-build-artifacts/safe/factory/: wrap.info  wrap.wasm
wrap-build-artifacts/safe/manager/: wrap.info  wrap.wasm
wrap-dependencies/account-abstraction/core/: wrap.info  wrap.wasm
wrap-dependencies/account-abstraction/relay/: wrap.info  (+1 more)
wrap-dependencies/gelato-relayer/: wrap.info  wrap.wasm
(+8 files in other folders)
