[package]
name = "safe-rust-playground"
description = "Safe wrap playground"
version = "0.0.1"

[dependencies]
polywrap_client = "0.1.6-beta.5"
polywrap_ethereum_wallet_plugin = "0.0.1-beta.5"
polywrap_client_default_config = "0.1.6-beta.5"
polywrap_datetime_plugin = "0.0.1-beta.3"

lazy_static = "1.4"
dotenv = "0.15"
base64 = "0.13"
serde = { version = "1.0", features = ["derive"] }
